# nominal-unification

./: .history  ChangeLog.md  LICENSE  README.md  nominal-unification.cabal
app/: Main.hs
src/: Constraints.hs  Lexer.x  Parser.y  Syntax.hs  Token.hs  Unification.hs
src/Machines/: DeltaMachine.hs  NuMachine.hs  RhoMachine.hs
