name:           nominal-unification
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/sgraf812/nominal-unification#readme>
homepage:       https://github.com/sgraf812/nominal-unification#readme
bug-reports:    https://github.com/sgraf812/nominal-unification/issues
author:         Sebastian Graf
maintainer:     sgraf1337@gmail.com
copyright:      2018 Sebastian Graf
license:        BSD3
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10
extra-source-files:
    ChangeLog.md
    README.md

source-repository head
  type: git
  location: https://github.com/sgraf812/nominal-unification

library
  build-tools:
      alex
    , happy
  exposed-modules:
      Constraints
      Lexer
      Machines.DeltaMachine
      Machines.NuMachine
      Machines.RhoMachine
      Unification
      Parser
      Syntax
      Token
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
    , array
    , bound
    , containers
    , deriving-compat
    , exceptions
    , transformers
  default-language: Haskell2010

executable nomuni
  main-is: Main.hs
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , nominal-unification
    , repline

  default-language: Haskell2010

test-suite nominal-unification-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Paths_nominal_unification
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , nominal-unification
  default-language: Haskell2010
